Fix checkbox align of tasks that have more than one line adding flex-start.

--- a/frontend-react/src/components/molecules/TaskList/TaskList.module.css
+++ b/frontend-react/src/components/molecules/TaskList/TaskList.module.css
@@ -17,6 +17,7 @@
 
 /* Starts Checkbox hide/show */
 .checkbox.checkbox {
+	align-self: flex-start;
 	opacity: 0;
 	pointer-events: none;
 	transition: opacity 300ms ease-in;
